@@ -11,9 +11,9 @@ include $(TOP)/configure/CONFIG
 #=============================
 # These are for testing PCAV data coming from PCDS
 # -DSIGNAL_TEST: do not receive BLD multicast data, generate fake data for testing!
-# -DFB05_TEST  : used when running tests on FB05
-USR_CPPFLAGS = -DxxxSIGNAL_TEST -DFB05_TEST
-USR_CFLAGS = -DxxxSIGNAL_TEST -DFB05_TEST
+# -DFB05_TEST  : used when running tests on FB05 - no
+#USR_CPPFLAGS = -DxxxSIGNAL_TEST -DFB05_TEST
+#USR_CFLAGS = -DxxxSIGNAL_TEST -DFB05_TEST
 
 # Production flags
 USR_CPPFLAGS =
