@@ -8,10 +8,10 @@
 # We will build some tools/scripts that allow us to
 # change this easily when relocating software.
 #==============================================================================
-EPICS_SITE_TOP=/usr/local/lcls/epics
-BASE_SITE_TOP=/usr/local/lcls/epics/base
-MODULES_SITE_TOP=/usr/local/lcls/epics/modules/R3-14-12
-IOC_SITE_TOP=/usr/local/lcls/epics/iocTop
+EPICS_SITE_TOP=/afs/slac/g/lcls/epics
+BASE_SITE_TOP=/afs/slac/g/lcls/epics/base
+MODULES_SITE_TOP=/afs/slac/g/lcls/epics/modules/R3-14-12
+IOC_SITE_TOP=/afs/slac/g/lcls/epics/iocTop
 EPICS_BASE_VER=base-R3-14-12
-PACKAGE_SITE_TOP=/usr/local/lcls/package
+PACKAGE_SITE_TOP=/afs/slac/g/lcls/package
 #==============================================================================
